z-index fixes

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -85,6 +85,7 @@
     z-index: 3;
 }
 #group2 .parallax_layer--deep{
+    background-image: url('/images/IMG_2063.JPG');
     background: lightslategray;
 }
 
